--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -77,11 +77,11 @@
 
                 <form action="">
 
-                    <label for="pristine">Pristine</label><br>
-                    <input type="number" id="pristine" name="pristine" required ><br>
+                    <label for="pristine">Pristine</label>
+                    <input type="number" id="pristine" name="pristine" required >
 
-                    <label for="damaged">Damaged</label><br>
-                    <input type="number" name="damaged" id="damaged" required ><br>
+                    <label for="damaged">Damaged</label>
+                    <input type="number" name="damaged" id="damaged" required >
 
                     <a href="{% url 'return_item' item.id item.item_borrowed.item_stock.id item.item_borrowed.borrow_form_id %}">Return</a>
 
