--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="{% static 'unreturned/unreturnedstyle.css' %}">
-        <link rel="stylesheet" href="{% static 'unreturned/pop_up_formss' %}">
+        <link rel="stylesheet" href="{% static 'unreturned/pop_up_form.css' %}">
         <title>Faculty Unreturned</title>
     </head>
 
