--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -78,15 +78,22 @@
 
                 <form action="" method="post"> {% csrf_token %}
 
-                    <label for="pristine">Pristine</label>
-                    <input type="number" id="pristine" name="pristine" required >
+                    <div class="input_section">
 
-                    <label for="damaged">Damaged</label>
-                    <input type="number" name="damaged" id="damaged" required >
+                        <label for="pristine">Pristine</label>
+                        <input type="number" id="pristine" name="pristine" required >
 
-                    <button onclick="show_hide_pop_up()">Cancel</button>
+                        <label for="damaged">Damaged</label>
+                        <input type="number" name="damaged" id="damaged" required >
 
-                    <a href="">Return</a>
+                    </div>
+
+                    <div class="btn_section">
+
+                        <button onclick="show_hide_pop_up()">Cancel</button>
+                        <a href="">Return</a>
+
+                    </div>
 
                 </form>
 
