--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -91,7 +91,7 @@
                     <div class="btn_section">
 
                         <button onclick="show_hide_pop_up()">Cancel</button>
-                        <input type="submit" name="return">
+                        <input type="submit" name="return" value="Return">
 
                     </div>
 
