--- a/static/unreturned/pop_up_form.css
+++ b/static/unreturned/pop_up_form.css
@@ -10,7 +10,7 @@
     height: fit-content;
 }
 
-#popup_form form {
+/* #popup_form form {
     width: 50%;
     padding: 15px;
     margin: auto;
@@ -46,4 +46,4 @@
     background: none;
     border: none;
     margin: 0px 15px;
-}
+} */
