--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -90,7 +90,8 @@
 
                     <div class="btn_section">
 
-                        <button onclick="show_hide_pop_up()">Cancel</button>
+                        <!-- <button onclick="show_hide_pop_up()">Cancel</button> -->
+                        <input type="button" value="Cancel" onclick="show_hide_pop_up()">
                         <input type="submit" name="return" value="Return">
 
                     </div>
