--- a/static/unreturned/pop_up_form.css
+++ b/static/unreturned/pop_up_form.css
@@ -10,7 +10,7 @@
     height: fit-content;
 }
 
-/* #popup_form form {
+#popup_form form {
     width: 50%;
     padding: 15px;
     margin: auto;
@@ -32,7 +32,7 @@
     outline: 2px black;
 }
 
-#popup_form form .btn_section{
+/* #popup_form form .btn_section{
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
