--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -8,36 +8,50 @@
     <body>
         
         <div class="header">
+            
             <div class="left-section">
-                <img class="lspu-logo" src="/static/home/adminhome/LSPU.png">
+                <img class="lspu-logo" src="{% static 'home/logo/lspu-logo.png' %}">
             </div>
             
             <div class="middle-section">
-                <form method="GET" action="{% url 'search_items' %}" class="search-form">
-                    <input class="search-bar" type="text" value="{{ query }}" placeholder="Search for name/id/category">
+                <form method="GET" action="{% url 'search_items' %}">
+                    <input class="search-bar" type="text" placeholder="Search for name/id/category" name="q" value="{{ query }}">
                     <input class="search-button" type="submit" value="Search">
                 </form>
             </div>
 
-            <div class="right-section">
-                <img class="css-logo" src="/static/home/adminhome/CSS.png" >
-            </div> 
-        </div>
+             <div class="right-section">
+                 <img class="ccs-logo" src="{% static 'home/logo/ccs-logo.jpg' %}" >
+             </div>
+        
+         </div>
+    
 
         <div class="head"></div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-                <div class="container">
-                    <a href="{% url 'home' %}" class="navbar-brand">Home</a>
-                    <a href="{% url 'recents' %}" class="navbar-brand">Recents</a>
-                    <a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a>
-                    <a href="{% url 'notification' %}" class="navbar-brand">Notification</a>
-                    <a href="{% url 'userprofile' %}" class="navbar-brand">Account</a>
-                    <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
+         
+            <div class="buttons-box">
+                <div class="button-grid">
+                    <a href="{% url 'home' %}" class="buttons-tabs">Home</a>
+                    <a href="{% url 'recents' %}" class="buttons-tabs">Recents</a>
+                    <a href="{% url 'unreturned' %}" class="buttons-tabs">Unreturned</a>
+                    <a href="{% url 'notification' %}" class="buttons-tabs">Notification</a>
+                    <a href="{% url 'userprofile' %}" class="buttons-tabs">Account</a>
+                    <a href="{% url 'logout' %}" class="buttons-tabs">Logout</a>
                 </div>
-            </nav>
+            </div>
 
                 <div id="mainForm" class="form">
                 
+                    <div class="category-title-button">
+                        <p class="category-container-title">
+                            Categories 
+                        </p>  
+                        
+                        <div id="back-button">
+                        
+                        </div>
+                    </div>
+
                     <div class="item">   
 
                         <div class="categories" id="category_container">
