--- a/templates/home/guest_borrow_form.html
+++ b/templates/home/guest_borrow_form.html
@@ -3,11 +3,11 @@
     <div class="borrow-row">
         <div class="item-borrow-row"> 
             <p>Guest Name:</p>
-            {{ guest_form.guest_name }}
+            {{ borrow_form.guest_name }}
             <p>Guest Course:</p>
-            {{ guest_form.guest_course }}
+            {{ borrow_form.guest_course }}
             <p>Guest Section:</p>
-            {{ guest_form.guest_section }}
+            {{ borrow_form.guest_section }}
 
 
             <p>Teacher Name:</p>
