--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -21,64 +21,64 @@
             </div> 
         </header>
         <div class="head"></div>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container">
-                <a href="{% url 'home' %}" class="navbar-brand">Home</a>
-                    <a href="{% url 'recents' %}" class="navbar-brand">Recents</a>
-                    <a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a>
-                    <a href="{% url 'notification' %}" class="navbar-brand">Notification</a>
-                    <a href="{% url 'userprofile' %}" class="navbar-brand">Account</a>
-                    <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
-            </div>
-        </nav>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container">
+                    <a href="{% url 'home' %}" class="navbar-brand">Home</a>
+                        <a href="{% url 'recents' %}" class="navbar-brand">Recents</a>
+                        <a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a>
+                        <a href="{% url 'notification' %}" class="navbar-brand">Notification</a>
+                        <a href="{% url 'userprofile' %}" class="navbar-brand">Account</a>
+                        <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
+                </div>
+            </nav>
         </div>
         
         <div id="mainForm" class="form">
-        <div id="container" class="rounded_corners">
+            <div id="container" class="rounded_corners">
+                    <form method="GET" action="{% url 'faculty_search_unreturned' %}" class="search-form">
+                        <input class="search-bar" type="text" name="q" value="{{ query }}" placeholder="Search for name/borrower">
+                        <input class="search-button" type="submit" value="Search" name="b">
+                    </form>
 
-            <form method="GET" action="{% url 'faculty_search_unreturned' %}" class="search-form">
-                <input class="search-bar" type="text" name="q" value="{{ query }}" placeholder="Search for name/borrower">
-                <input class="search-button" type="submit" value="Search" name="b">
-            </form>
+                    {% for item in unreturned_items reversed %}
+                    <div id="wrapper">
 
-            <!-- test block code -->
-            <!-- template for the items -->
-            {% for item in unreturned_items reversed %}
-            <div id="wrapper">
+                        <div id="top">
+                            <div id="left">
+                                {% if item.item_borrowed.item_stock.item_information.item_photo %}
+                                    <img src="{{ item.item_borrowed.item_stock.item_information.item_photo.url }}" class="inventory_item">
+                                {% endif %}
 
-                <div id="top">
-                    <div id="left">
-                        {% if item.item_borrowed.item_stock.item_information.item_photo %}
-                            <img src="{{ item.item_borrowed.item_stock.item_information.item_photo.url }}" class="inventory_item">
-                        {% endif %}
+                            </div>
+                            <div id="right">
+                                <p id="item_name">{{ item.item_borrowed.item_stock.item_information.item_name }}</p>
+                                <p id="item_details">
+                                    Time Borrowed: {{ item.item_borrowed.item_date_borrowed }}<br />
+                                    Time Returned: {{ item.item_borrowed.item_date_returned }}<br />
+                                    Borrower: {{ item.item_borrowed.item_borrower }}
+                                </p>
+                                <p id="item_quantity">Item Quantity: {{ item.item_borrowed.item_quantity }}</p>
 
+                            </div>
+                        </div>
+                        <div id="bottom">
+                            
+                        </div>
+                        <div class="recent-lines">
+
+                            <div id="btn_con">
+                                <button id="return_btn" class="rounded_corners" onclick="showReturnForm('{{item.item_borrowed.borrow_form_id}}')">Return</button>
+                            </div>
+                        </div>
                     </div>
-                    <div id="right">
-                        <p id="item_name">{{ item.item_borrowed.item_stock.item_information.item_name }}</p>
-                        <p id="item_details">
-                            Time Borrowed: {{ item.item_borrowed.item_date_borrowed }}<br />
-                            Time Returned: {{ item.item_borrowed.item_date_returned }}<br />
-                            Borrower: {{ item.item_borrowed.item_borrower }}
-                        </p>
-                        <p id="item_quantity">Item Quantity: {{ item.item_borrowed.item_quantity }}</p>
-
-                    </div>
-                </div>
-                <div id="bottom">
-                    
-                </div>
-                <div class="recent-lines">
-                    <div id="btn_con">
-                        <button id="return_btn" class="rounded_corners">
-                        <a href="{% url 'return_item' item.id item.item_borrowed.item_stock.id %}">Return</a></button>
-                    </div>
-                </div>
+                    {% endfor %}
+                    <!-- template for the items -->
+                {% include 'home/result_list.html' %}
             </div>
-            {% endfor %}
-            <!-- template for the items -->
-        {% include 'home/result_list.html' %}
+            <div id="return_container" class="return_container">
 
-    </div>
-</div>
+            </div>
+        </div>
+        <script defer src="{% static 'unreturned/unreturned.js' %}"></script>
     </body>
 </html>
