--- a/static/home/homegueststyle.css
+++ b/static/home/homegueststyle.css
@@ -377,8 +377,14 @@ Start coding here
 .items_div {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    padding-top: 0;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    align-content: space-evenly;
+    gap: 1em;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .items-grid{
